<resources>
    <string name="app_name">Pro Cooking Recipes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="entrar">Entrar</string>
    <string name="inicio">Inicio</string>
    <string name="favoritos">Favoritos</string>
    <string name="cuenta">Cuenta</string>
    <string name="resultados">Resultados\n</string>
    <string name="busqueda">Búsqueda</string>
    <string name="tipo_de_cocina">Tipo de cocina</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="tipo_de_dieta">Tipo de dieta</string>
    <string name="intolerancias">Intolerancias</string>
    <string name="carbohidratos_g_plato">Carbohidratos (g/plato)</string>
    <string name="proteina_g_plato">Proteína (g/plato)</string>
    <string name="calorias_kcal_plato">Calorías (kcal/plato)</string>
    <string name="sign_in_with_google">Iniciar sesión con Google</string>
    <string name="no_ingredientes">No se han seleccionado ingredientes</string>
    <string name="historial">Historial</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="telefono">Teléfono</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="nombre">Nombre</string>
    <string name="historial_vacio">El historial está vacío.</string>
    <string name="no_recetas">No se han encontrado recetas favoritas.</string>
    <string name="fernando_munoz_torres">Fernando Muñoz Torres</string>
    <string name="correo_no_encontrado">No se ha encontrado el correo electrónico de la cuenta.</string>
    <string name="tlfn">628645881</string>
    <string name="pro_cooking_recipes">PRO COOKING RECIPES</string>
    <string name="pass_olvidado">¿Olvidaste tu contraseña?</string>
    <string name="registrar">Registrar</string>
    <string name="iniciar_sesion">Iniciar sesión</string>


    <string-array name="menu_busqueda">
        <item>Ingredientes</item>
        <item>Tipo de cocina</item>
        <item>Nacionalidad</item>
        <item>Tipo de dieta</item>
        <item>Intolerancias</item>
        <item>Carbohidratos(g)</item>
        <item>Proteína(g)</item>
        <item>Calorías(kcal)</item>
    </string-array>
    <string-array name="menu_tipo">
        <item>Plato principal</item>
        <item>Guarnición</item>
        <item>Postre</item>
        <item>Desayuno</item>
        <item>Aperitivo</item>
        <item>Ensalada</item>
        <item>Sopa</item>
        <item>Bebida</item>
        <item>Salsa</item>
    </string-array>
    <string-array name="menu_nacionalidad">
        <item>Africana</item>
        <item>Asiática</item>
        <item>Americana</item>
        <item>Británica</item>
        <item>Cajún</item>
        <item>Caribeña</item>
        <item>China</item>
        <item>Europa del Este</item>
        <item>Europea</item>
        <item>Francesa</item>
        <item>Alemana</item>
        <item>Griega</item>
        <item>India</item>
        <item>Irlandesa</item>
        <item>Italiana</item>
        <item>Japonesa</item>
        <item>Judía</item>
        <item>Coreana</item>
        <item>Latinoamericana</item>
        <item>Mediterránea</item>
        <item>Mexicana</item>
        <item>Oriente Medio</item>
        <item>Nórdica</item>
        <item>Sureña</item>
        <item>Española</item>
        <item>Tailandesa</item>
        <item>Vietnamita</item>
    </string-array>
    <string-array name="menu_dietas">
        <item>Sin gluten</item>
        <item>Vegetariana</item>
        <item>Ketogénica</item>
        <item>Lacto-Vegetariana</item>
        <item>Ovo-Vegetariana</item>
        <item>Vegana</item>
        <item>Paleo</item>
    </string-array>
    <string-array name="menu_intolerancias">
        <item>Lácteos</item>
        <item>Huevo</item>
        <item>Gluten</item>
        <item>Grano</item>
        <item>Cacahuete</item>
        <item>Mariscos</item>
    </string-array>


</resources>