<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/cabecera_busqueda">

    <fragment
        android:id="@+id/cabecera_busqueda"
        android:name="com.pcr.procookingrecipes.ui.busqueda.BusquedaFragmento"
        android:label="@string/busqueda"
        tools:layout="@layout/fragmento_busqueda" />

    <fragment
        android:id="@+id/cabecera_favoritos"
        android:name="com.pcr.procookingrecipes.ui.favoritos.FavoritosFragmento"
        android:label="@string/favoritos"
        tools:layout="@layout/fragmento_favoritos" />
    <fragment
        android:id="@+id/cabecera_historial"
        android:name="com.pcr.procookingrecipes.ui.historial.HistorialFragmento"
        android:label="@string/historial"
        tools:layout="@layout/fragmento_historial" />

    <fragment
        android:id="@+id/cabecera_cuenta"
        android:name="com.pcr.procookingrecipes.ui.cuenta.CuentaFragment"
        android:label="@string/cuenta"
        tools:layout="@layout/fragmento_cuenta" />
</navigation>